# perf-oriented-dev

./: .gitignore
IO-Loader/: background_load.fio  io_load_generator.sh
automated_tester/: automated_evaluator.py  baseline.slurm  compute_miss_rates.py  example.json  experiment_generator.py  template.json
exercises/: sheet_03.md  sheet_04.md
larger_samples/: job_runner.slurm
larger_samples/npb_bt/: CMakeLists.txt  CMakeLists_optimizers.txt  CMakeLists_original.txt
larger_samples/npb_bt-tracy/: CMakeLists.txt
larger_samples/ssca2/: CMakeLists.txt  CMakeLists_optimizers.txt
small_samples/: CMakeLists.txt  CMakeLists_optimizers.txt
small_samples/filegen/: filegen.c
small_samples/filesearch/: filesearch.c
small_samples/nbody/: nbody.c
solutions/: execute_all_slurms.sh
solutions/exc_01/delannoy/: delannoy.json  delannoy.slurm
solutions/exc_01/filegen/: filegen.json  filegen.slurm
solutions/exc_01/filesearch/: filesearch.json  filesearch.slurm
solutions/exc_01/mmul/: mmul.json  mmul.slurm
solutions/exc_01/nbody/: nbody.json  nbody.slurm
solutions/exc_01/qap/: qap.json  qap.slurm
solutions/exc_01/report/: report.md
solutions/exc_02/delannoy/: delannoy.json  delannoy.slurm
solutions/exc_02/filegen/: filegen.json  filegen.slurm
solutions/exc_02/filesearch/: filesearch.slurm
solutions/exc_02/mmul/: mmul.json  mmul.slurm
solutions/exc_02/nbody/: nbody.slurm
solutions/exc_02/qap/: qap.slurm
solutions/exc_02/report/: report.md
solutions/exc_03/report/: report.md
solutions/exc_03/task_1/: analysis_npb_bt_a-home.txt  analysis_npb_bt_a-lcc3.txt  analysis_npb_bt_b-home.txt  analysis_npb_bt_b-lcc3.txt
solutions/exc_04/report/: report.md
solutions/exc_04/task_1/: massif.out.3829357  massif.slurm
solutions/exc_04/task_2/: npb_bt-perf.slurm  npb_bt.json  ssca2-perf.slurm  ssca2.json
solutions/exc_05/delannoy/: delannoy.slurm
solutions/exc_05/npb_bt/: npb_bt.slurm
solutions/exc_05/ssca2/: ssca2.json  ssca2.slurm
solutions/exc_05/task1/: collected_results.csv
solutions/exc_0N/delannoy/: delannoy.json
solutions/exc_0N/filegen/: filegen.json  filegen.slurm
tools/load_generator/: exec_with_workstation_heavy.sh
(+118 files in other folders)
